<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/aboutapp"
    android:elevation="0dp"
    tools:context=".aboutdeveloper">



    <TextView
        android:id="@+id/aboutdeveloper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:fontFamily="@font/pacifico"
        android:padding="10dp"
        android:text="@string/about_developer"
        android:textAlignment="center"
        android:textColor="#FBF5F5"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutdeveloper">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/nunito"
            android:padding="10dp"
            android:text="@string/developer_name"
            android:textColor="#FFF"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/nunito"
            android:padding="10dp"
            android:text="@string/yashveer_singh"
            android:textColor="#FFF"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/nunito"
            android:padding="10dp"
            android:text="@string/developer_email"
            android:textColor="#FFF"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/nunito"
            android:padding="10dp"
            android:text="@string/yashveersingh30401_gmail_com"
            android:textColor="#FFF"
            android:textSize="18sp" />


    </LinearLayout>

    <TextView
        android:id="@+id/hiyashveer"
        android:layout_width="398dp"
        android:layout_height="262dp"
        android:layout_marginTop="34dp"
        android:fontFamily="@font/nunito"
        android:padding="20dp"
        android:text="@string/hi_i_am_yashveer_singh_student_of_kendriya_vidyalaya_and_i_made_this_app_for_school_and_i_want_to_thank_all_the_users_of_this_app"
        android:textAlignment="viewStart"
        android:textColor="#FFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.023" />



</androidx.constraintlayout.widget.ConstraintLayout>

